# demo

./: cabal.project  hdt.cabal  shell.nix
app/: .Main.hs.swp  Main.hs
