cabal-version:      3.0
name:               hdt
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrei Mikhailov
maintainer:         a.mkhlv@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall


executable hdt
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        text,
        directory,
        data-default,
        haskell-gi-base,
        gi-gtk4,
        gi-gdk4,
        gi-gio,
        gi-gobject,
        vector,
        process

    hs-source-dirs:   app
    default-language: Haskell2010
